# GenAISentimentTrader

./: LICENSE  README.md  pyproject.toml
genaisentimenttrader/: initializers.py
genaisentimenttrader/data_sink/: sink.py
genaisentimenttrader/models/: __init__.py  types.py
genaisentimenttrader/processors/: __init__.py  entity_extractor.py  sentiment_pipeline.py
tests/integration/: test_integration.py
tests/unit/: test_data_sink.py  test_entity_extractor.py  test_sentiment_pipeline.py
